$Id: CHANGELOG,v 1.7 2004/01/20 19:38:07 urkle Exp $

TODO:
* Port connection portion to other DBMS?  Genericize the module?  Start with 
  PostgreSQL. (provider mechanism, and libDBI)
* does determining table name in massvirtual mode upon every request
  cause performance degradation?  If so fix.
* LogSQLRotateLogs directive with daily/monthly/weekly/etc.
* new format char: IP as bigint? ( not w/ ipV6 )
* socket-based middleman daemon with configurable conns, or connect/disconnect.
	DBI connection pool when I switch to DBI.
* ignore by cookie
* tools to import logs into SQL (waiting on permission from author)
* Directive to yes/no create ancillary tables (or just access table)
* break module into separate code files
    separate DB implimentation into sub-modules via provider mechanism
    separate module for SSL support
	apache version specific code already split into separate files.
* add document building to Makefile.in
* investigate thread safety issues (libmysqlclient_r)

CHANGES:
1.93: 2004-01-20
* Compiles for apache 1.3 AND 2.0
* split apache version specific functions to seperate header files
* split apache version specific includes to seperate header files
* added wrapper defines for apache 1.3
* updated configure m4 scripts to detect both apache versions at the same time 
	and assign defines as to which version was found.
* made install default to not activate module in configuration files.
	(use make activate)

1.92: 2004-01-05
* fixed compilation issue with mysql 4.x where mysql_error returns const char *
* Have SSL support compiling (though not really tested)
* updated configure macros to detect mod_ssl.h
* configure now uses --with-apxs instead of --with-apache
* Added documentation from 1.19b (needs to be update)
* Fixed an issue with dependencies in Makefile.in

1.91: 2003-12-23
* Added checks for MySQL to autoconf
* fixed merge code to work correctly.
* Merged in 1.19b1 changes