@@ -1,4 +1,4 @@
-/* $Header: /home/cvs/mod_log_sql/mod_log_sql.h,v 1.1 2004/01/20 20:33:20 urkle Exp $ */
+/* $Header: /home/cvs/mod_log_sql/mod_log_sql.h,v 1.2 2004/01/21 04:34:21 urkle Exp $ */
 #ifndef MOD_LOG_SQL_H
 #define MOD_LOG_SQL_H
 
@@ -26,7 +26,7 @@
 typedef const char *log_sql_item_func(request_rec *r, char *a);
 
 /* Registration Function for extract functions */
-LOGSQL_DECLARE(void) log_sql_register_item(apr_pool_t *p, char *key,
+LOGSQL_DECLARE(void) log_sql_register_item(apr_pool_t *p, char key,
 		log_sql_item_func *func, const char *sql_field_name,
 		int want_orig_default, int string_contents);
 
