@@ -1,4 +1,4 @@
-$Id: CHANGELOG,v 1.7 2004/01/20 19:38:07 urkle Exp $
+$Id: CHANGELOG,v 1.8 2004/01/21 04:34:21 urkle Exp $
 
 TODO:
 * Port connection portion to other DBMS?  Genericize the module?  Start with 
@@ -18,6 +18,8 @@ TODO:
 	apache version specific code already split into separate files.
 * add document building to Makefile.in
 * investigate thread safety issues (libmysqlclient_r)
+	Add thread locks if using standard mysqlclient
+* rewrite main core logging function to optimize for speed.
 
 CHANGES:
 1.93: 2004-01-20
@@ -29,6 +31,7 @@ CHANGES:
 	and assign defines as to which version was found.
 * made install default to not activate module in configuration files.
 	(use make activate)
+* split SSL logging to separate module (still needs to be finished)
 
 1.92: 2004-01-05
 * fixed compilation issue with mysql 4.x where mysql_error returns const char *
